send us a tweet

--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,24 @@ html(lang="es")
 		title Test
 	body
 		h1 Test
+		.main
+			p
+				|Estamos en construccion
+				br
+				|susbcribete a nuestra cuenta de 
+				a(href="tweetter") tweetter
+				br
+				|o siguenos en 
+				a(href="facebook") facebook
+
+
+
 		.box
-			.tweetter
-				a(href="facebook.com") h1 facebook	
 			.facebook
-				a(href="tweetter") h1 tweetter
+				h1
+					a(href="facebook.com") facebook	
+			.tweetter
+				h1
+					a(href="tweetter")  tweetter
+			.newsletter
+				a(href="#") 
