--- a/style.styl
+++ b/style.styl
@@ -5,64 +5,8 @@ h1
 body
 	background green
 	color #FFF
+	text-align: center;
 .box
 	background #222
 .tweeter:before
 	content s
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	http://www.youtube.com/watch?feature=player_detailpage&list=ULnBGliGUHDcA&v=nBGliGUHDcA#t=50s
